--- a/.github/workflows/build-win64-msvc.yml
+++ b/.github/workflows/build-win64-msvc.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         cfg:
           - { runner: windows-latest, build: 'cmake', dist: false }
-          #- { runner: localhost-win10, build: 'cmake', dist: true}
+          - { runner: localhost-win10, build: 'cmake', dist: false}
 
     name: ${{matrix.cfg.runner}} ${{matrix.cfg.build}}
 
@@ -147,8 +147,10 @@ jobs:
       - name: Build
         shell: cmd
         run: |
+          dir
           cmake --build build --config RelWithDebInfo --parallel
           cd build
+          dir
           dir bin
           
       - name: Deploy
