--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,8 +1,10 @@
 target_sources(Swiftray PRIVATE
-  software_update.c
+  software_update.cpp
 )
 if (ENABLE_SPARKLE)
-target_sources(Swiftray PRIVATE
-  sparkle_bridge.m
-)
+  if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    target_sources(Swiftray PRIVATE
+      sparkle_bridge.m
+    )
+  endif()
 endif ()
