--- a/.github/workflows/build-win64-msvc.yml
+++ b/.github/workflows/build-win64-msvc.yml
@@ -148,7 +148,7 @@ jobs:
         shell: cmd
         run: |
           dir
-          cmake --build build --config RelWithDebInfo --parallel
+          cmake --build ./build --config RelWithDebInfo --parallel
           cd build
           dir
           dir bin
