--- a/.github/workflows/build-win64-msvc.yml
+++ b/.github/workflows/build-win64-msvc.yml
@@ -24,6 +24,7 @@ jobs:
 
     env:
       VCPKG_INSTALLATION_ROOT: 'C:\vcpkg'
+      VCPKG_DEFAULT_TRIPLET: 'x64-windows'
 
     runs-on: ${{matrix.cfg.runner}}
     steps:
